--- a/Asignment2_function,Recursion/.project
+++ b/Asignment2_function,Recursion/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Assignment2_Function,Recursion</name>
+	<name>Asignment2_function,Recursion</name>
 	<comment></comment>
 	<projects>
 	</projects>
